df loader change

--- a/exploration/pytorch_model.ipynb
+++ b/exploration/pytorch_model.ipynb
@@ -21,6 +21,7 @@
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from final_project.loader import get_df\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
@@ -40,6 +41,7 @@
     "    ax.set_xlabel('Count')\n",
     "    ax.set_ylabel('Labels')\n",
     "\n",
+    "    print(data[1])\n",
     "    ax.bar_label(bars, data[1])\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
@@ -54,44 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in data\n",
-    "# NOTE change your file path\n",
-    "master_df = pd.read_csv('./Flights_2018_1_test_frame.csv',\n",
-    "                low_memory=False # TODO not sure what this does\n",
-    "                )\n",
-    "\n",
-    "'''\n",
-    "process data for training, split into test/train/validation\n",
-    "'''\n",
-    "\n",
-    "# NOTE remove operating airline if not using one hot encoding\n",
-    "# X = df[[\"DayofMonth\",\"Month\",\"Year\", \"Distance\", \"DepDelay\", \"Operating_Airline \"]]\n",
-    "X = master_df.drop(columns=[\"ArrDel15\",\"Duplicate\"])\n",
-    "y = master_df[[\"ArrDel15\"]]\n",
-    "y = y.ArrDel15.ravel() # flatten\n",
-    "\n",
-    "print(\"# samples after dropping nan:\", y.shape[0])\n",
-    "\n",
-    "# split into train and test/validation (which is split in next line)\n",
-    "X_train, X_test_val, y_train, y_test_val = train_test_split(X, y,\n",
-    "                                                    test_size=0.3,\n",
-    "                                                    random_state=150)\n",
-    "\n",
-    "# create validation and test sets each 15% of total data\n",
-    "X_test, X_validation, y_test, y_validation = train_test_split(X_test_val, y_test_val,\n",
-    "                                                    test_size=0.5,\n",
-    "                                                    random_state=150)\n",
-    "d = {\"train\": (X_train,y_train), \"test\":(X_test,y_test), \"validation\": (X_validation,y_validation)}\n",
-    "\n",
-    "\n",
-    "# number of classes, number of instances in each class\n",
-    "for each in d.keys():\n",
-    "    print(f\"{each}:\")\n",
-    "    print(\" - Number of features: \", len(d[each][0].columns))\n",
-    "    print(\" - Number of samples: \", len(d[each][0]))\n",
-    "    unique, counts = np.unique(d[each][1], return_counts=True)\n",
-    "    plot_freq(each, (unique, counts))\n",
-    "    print()\n"
+    "master_df = get_df(file=\"Flights_2018_1.csv\")"
    ]
   },
   {
@@ -100,26 +65,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in data\n",
-    "# NOTE change your file path\n",
-    "master_df = pd.read_csv('../../raw/Flights_2018_1.csv',\n",
-    "                nrows=40000,\n",
-    "                low_memory=False # TODO not sure what this does\n",
-    "                )\n",
-    "feature_cols = [\"DayofMonth\",\"Month\",\"Year\", \"Distance\",\"DepDelay\", \"ArrDel15\", \"Operating_Airline \"]\n",
-    "df = master_df[feature_cols].dropna() # get rid of nan\n",
-    "\n",
     "'''\n",
     "process data for training, split into test/train/validation\n",
     "'''\n",
-    "\n",
-    "# NOTE remove operating airline if not using one hot encoding\n",
-    "# X = df[[\"DayofMonth\",\"Month\",\"Year\", \"Distance\", \"DepDelay\", \"Operating_Airline \"]]\n",
-    "X = df[[\"DayofMonth\",\"Month\",\"Year\", \"Distance\", \"DepDelay\"]]\n",
-    "y = df[[\"ArrDel15\"]]\n",
+    "X = master_df.drop(columns=[\"ArrDel15\",\"Duplicate\"])\n",
+    "y = master_df[[\"ArrDel15\"]]\n",
     "y = y.ArrDel15.ravel() # flatten\n",
     "\n",
-    "print(\"# samples after dropping nan:\", y.shape[0])\n",
+    "print(\"# samples:\", y.shape[0])\n",
     "\n",
     "# split into train and test/validation (which is split in next line)\n",
     "X_train, X_test_val, y_train, y_test_val = train_test_split(X, y,\n",
