--- a/exploration/frame_builder.ipynb
+++ b/exploration/frame_builder.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#Authors: Dan Blum, Matt Greene, Bram Zilzter\n",
     "#Dataset: https://www.kaggle.com/datasets/robikscube/flight-delay-dataset-20182022?select=readme.md\n",
@@ -23,35 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [01:18<00:00,  6.58s/it]\n"
+      "100%|██████████| 55/55 [17:41<00:00, 19.30s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Year                 2018\n",
-      "Month                   8\n",
-      "DayofMonth              7\n",
-      "Operating_Airline      B6\n",
-      "Origin                SFO\n",
-      "Dest                  FLL\n",
-      "ArrDel15              1.0\n",
-      "DistanceGroup          11\n",
-      "CarrierDelay         24.0\n",
-      "WeatherDelay          0.0\n",
-      "NASDelay              8.0\n",
-      "SecurityDelay         0.0\n",
-      "LateAircraftDelay    96.0\n",
-      "Duplicate               N\n",
-      "Name: 0, dtype: object\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -74,7 +78,7 @@
     "]\n",
     "\n",
     "# test_file = 'Flights_2018_1.csv'\n",
-    "test_frame = loader.get_df(year=2018)\n",
+    "test_frame = loader.get_df(year=2019)\n",
     "\n",
     "# test_frame = loader.get_df(file=test_file)\n",
     "test_frame = test_frame[keep_columns].copy()\n",
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
