--- a/exploration/pytorch_model.ipynb
+++ b/exploration/pytorch_model.ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from final_project.models import FeedForward\n",
+    "from final_project import builder\n",
     "from tqdm import tqdm\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +64,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Quarter  DayOfWeek  FlightDate Marketing_Airline_Network  \\\n",
+      "0        1          2  2018-01-23                        DL   \n",
+      "1        1          3  2018-01-24                        DL   \n",
+      "2        1          4  2018-01-25                        DL   \n",
+      "3        1          5  2018-01-26                        DL   \n",
+      "4        1          6  2018-01-27                        DL   \n",
+      "\n",
+      "  Operated_or_Branded_Code_Share_Partners  DOT_ID_Marketing_Airline  \\\n",
+      "0                            DL_CODESHARE                     19790   \n",
+      "1                            DL_CODESHARE                     19790   \n",
+      "2                            DL_CODESHARE                     19790   \n",
+      "3                            DL_CODESHARE                     19790   \n",
+      "4                            DL_CODESHARE                     19790   \n",
+      "\n",
+      "  IATA_Code_Marketing_Airline  Flight_Number_Marketing_Airline  \\\n",
+      "0                          DL                             3298   \n",
+      "1                          DL                             3298   \n",
+      "2                          DL                             3298   \n",
+      "3                          DL                             3298   \n",
+      "4                          DL                             3298   \n",
+      "\n",
+      "  Originally_Scheduled_Code_Share_Airline  \\\n",
+      "0                                       0   \n",
+      "1                                       0   \n",
+      "2                                       0   \n",
+      "3                                       0   \n",
+      "4                                       0   \n",
+      "\n",
+      "   DOT_ID_Originally_Scheduled_Code_Share_Airline  ... Dest_TYS  Dest_UIN  \\\n",
+      "0                                             0.0  ...        0         0   \n",
+      "1                                             0.0  ...        0         0   \n",
+      "2                                             0.0  ...        0         0   \n",
+      "3                                             0.0  ...        0         0   \n",
+      "4                                             0.0  ...        0         0   \n",
+      "\n",
+      "   Dest_USA Dest_VLD Dest_VPS  Dest_WRG  Dest_XNA  Dest_YAK  Dest_YKM Dest_YNG  \n",
+      "0         0        0        0         0         0         0         0        0  \n",
+      "1         0        0        0         0         0         0         0        0  \n",
+      "2         0        0        0         0         0         0         0        0  \n",
+      "3         0        0        0         0         0         0         0        0  \n",
+      "4         0        0        0         0         0         0         0        0  \n",
+      "\n",
+      "[5 rows x 744 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "master_df = get_df(file=\"Flights_2018_1.csv\")"
+    "master_df = get_df(file=\"Flights_2018_1.csv\")\n",
+    "# builder.runEDA(master_df)\n",
+    "master_df = builder.encodeFrame(master_df)"
    ]
   },
   {
@@ -70,7 +132,7 @@
     "'''\n",
     "process data for training, split into test/train/validation\n",
     "'''\n",
-    "X = master_df.drop(columns=[\"ArrDel15\",\"Duplicate\"])\n",
+    "X = master_df.drop(columns=[\"ArrDel15\"])\n",
     "y = master_df[[\"ArrDel15\"]]\n",
     "y = y.ArrDel15.ravel() # flatten\n",
     "print(\"# samples:\", y.shape[0])\n",
