--- a/exploration/test.ipynb
+++ b/exploration/test.ipynb
@@ -2,37 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "from final_project.loader import get_df\n",
-    "from final_project.models import log_reg\n",
-    "import final_project.builder as builder\n",
+    "from final_project import builder\n",
+    "from final_project import models\n",
+    "from final_project.models import ModelENUM\n",
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = get_df(file='Flights_2018_1.csv')\n",
-    "df = builder.col\n",
+    "df = builder.encodeFrame(builder.columnManager(df))\n",
+    "\n",
     "x = df.drop(columns=['ArrDel15'])\n",
     "y = df[['ArrDel15']]\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=150)"
@@ -40,51 +36,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr_pipeline = log_reg.get_lr_pipeline()\n",
+    "lr_pipeline = models.get_pipeline(ModelENUM.LR)\n",
     "param_grid = [\n",
-    "    log_reg.get_lr_param(solver=\"liblinear\", penalty=[\"l1\", \"l2\"]),\n",
-    "    log_reg.get_lr_param(solver=\"saga\", penalty=[\"l2\", \"elasticnet\"]),\n",
+    "    # log_reg.get_lr_param(solver=\"liblinear\", penalty=[\"l1\", \"l2\"], c_list=[1, 10]),\n",
+    "    # log_reg.get_lr_param(solver=\"saga\", penalty=[\"l2\", \"elasticnet\"], c_list=[1,10]),\n",
+    "    models.get_lr_param(penalty=[\"l1\"], c_list=[.1], max_iter=[1000]),\n",
+    "    # models.get_lr_param(solver=\"saga\", penalty=[\"l2\"], c_list=[.1]),\n",
     "]\n",
-    "grid_search = log_reg.get_lr_gridsearchcv(\n",
-    "    pipeline=lr_pipeline, param_grid=param_grid\n",
+    "grid_search = models.get_grid_search_cv(\n",
+    "    pipeline=lr_pipeline, param_grid=param_grid, cv=3, n_jobs=20\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg_model = grid_search.fit(x_train, y_train.to_numpy().ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_pipeline = models.get_pipeline(ModelENUM.SVM)\n",
+    "param_grid = [\n",
+    "    models.get_svm_param(gamma=['scale'], c_list=[0.1], coef0=[0.1], kernel=['poly'])\n",
+    "]\n",
+    "grid_search = models.get_grid_search_cv(\n",
+    "    pipeline=svm_pipeline, param_grid=param_grid, cv=3, n_jobs=20\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/drumblum/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.10/site-packages/sklearn/utils/multiclass.py:380: RuntimeWarning: invalid value encountered in cast\n",
-      "  if xp.any(data != data.astype(int)):\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Input y contains NaN.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m logreg_model \u001b[39m=\u001b[39m grid_search\u001b[39m.\u001b[39;49mfit(x_train, y_train)\n",
-      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.10/site-packages/sklearn/model_selection/_search.py:785\u001b[0m, in \u001b[0;36mBaseSearchCV.fit\u001b[0;34m(self, X, y, groups, **fit_params)\u001b[0m\n\u001b[1;32m    782\u001b[0m X, y, groups \u001b[39m=\u001b[39m indexable(X, y, groups)\n\u001b[1;32m    783\u001b[0m fit_params \u001b[39m=\u001b[39m _check_fit_params(X, fit_params)\n\u001b[0;32m--> 785\u001b[0m cv_orig \u001b[39m=\u001b[39m check_cv(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcv, y, classifier\u001b[39m=\u001b[39;49mis_classifier(estimator))\n\u001b[1;32m    786\u001b[0m n_splits \u001b[39m=\u001b[39m cv_orig\u001b[39m.\u001b[39mget_n_splits(X, y, groups)\n\u001b[1;32m    788\u001b[0m base_estimator \u001b[39m=\u001b[39m clone(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mestimator)\n",
-      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.10/site-packages/sklearn/model_selection/_split.py:2445\u001b[0m, in \u001b[0;36mcheck_cv\u001b[0;34m(cv, y, classifier)\u001b[0m\n\u001b[1;32m   2440\u001b[0m cv \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m \u001b[39mif\u001b[39;00m cv \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m cv\n\u001b[1;32m   2441\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(cv, numbers\u001b[39m.\u001b[39mIntegral):\n\u001b[1;32m   2442\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   2443\u001b[0m         classifier\n\u001b[1;32m   2444\u001b[0m         \u001b[39mand\u001b[39;00m (y \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m-> 2445\u001b[0m         \u001b[39mand\u001b[39;00m (type_of_target(y, input_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39my\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39mbinary\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmulticlass\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m   2446\u001b[0m     ):\n\u001b[1;32m   2447\u001b[0m         \u001b[39mreturn\u001b[39;00m StratifiedKFold(cv)\n\u001b[1;32m   2448\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.10/site-packages/sklearn/utils/multiclass.py:381\u001b[0m, in \u001b[0;36mtype_of_target\u001b[0;34m(y, input_name)\u001b[0m\n\u001b[1;32m    379\u001b[0m     data \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39mdata \u001b[39mif\u001b[39;00m issparse(y) \u001b[39melse\u001b[39;00m y\n\u001b[1;32m    380\u001b[0m     \u001b[39mif\u001b[39;00m xp\u001b[39m.\u001b[39many(data \u001b[39m!=\u001b[39m data\u001b[39m.\u001b[39mastype(\u001b[39mint\u001b[39m)):\n\u001b[0;32m--> 381\u001b[0m         _assert_all_finite(data, input_name\u001b[39m=\u001b[39;49minput_name)\n\u001b[1;32m    382\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mcontinuous\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m suffix\n\u001b[1;32m    384\u001b[0m \u001b[39m# Check multiclass\u001b[39;00m\n",
-      "File \u001b[0;32m~/Northeastern/cs6140/CS6140-final-project/.venv/lib/python3.10/site-packages/sklearn/utils/validation.py:161\u001b[0m, in \u001b[0;36m_assert_all_finite\u001b[0;34m(X, allow_nan, msg_dtype, estimator_name, input_name)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[39mif\u001b[39;00m estimator_name \u001b[39mand\u001b[39;00m input_name \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mand\u001b[39;00m has_nan_error:\n\u001b[1;32m    145\u001b[0m     \u001b[39m# Improve the error message on how to handle missing values in\u001b[39;00m\n\u001b[1;32m    146\u001b[0m     \u001b[39m# scikit-learn.\u001b[39;00m\n\u001b[1;32m    147\u001b[0m     msg_err \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\n\u001b[1;32m    148\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mestimator_name\u001b[39m}\u001b[39;00m\u001b[39m does not accept missing values\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    149\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m encoded as NaN natively. For supervised learning, you might want\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    159\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m#estimators-that-handle-nan-values\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    160\u001b[0m     )\n\u001b[0;32m--> 161\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg_err)\n",
-      "\u001b[0;31mValueError\u001b[0m: Input y contains NaN."
+      "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
+      "[CV 1/3; 1/1] START svm__C=0.1, svm__coef0=0.1, svm__gamma=scale, svm__kernel=poly\n",
+      "[CV 3/3; 1/1] START svm__C=0.1, svm__coef0=0.1, svm__gamma=scale, svm__kernel=poly\n",
+      "[CV 2/3; 1/1] START svm__C=0.1, svm__coef0=0.1, svm__gamma=scale, svm__kernel=poly\n"
      ]
     }
    ],
    "source": [
-    "logreg_model = grid_search.fit(x_train, y_train)"
+    "svm_model = grid_search.fit(x_train, y_train.to_numpy().ravel())"
    ]
   }
  ],
